changed placeholder and widths

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <!-- # of people -->
       <div class="row">
-        <div class="input-field col s4 offset-s4">
+        <div class="input-field col s6 offset-s3">
           <input
             id="amount-of-people-input"
             type="number"
@@ -38,12 +38,12 @@
 
       <!-- Overall total -->
       <div class="row">
-        <div class="input-field col s4 offset-s4">
+        <div class="input-field col s6 offset-s3">
           <input
             id="total"
             type="text"
             oninput="this.value=validateNumber(this.value)"
-            placeholder="Overall total"
+            placeholder="Amount"
           />
           <label for="total">Total</label>
         </div>
