--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><link rel="manifest" href="/split/manifest.json"/><title>Split Expenses</title>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8B1XDST26S"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-8B1XDST26S');
-</script>
-<script defer="defer" src="/split/static/js/main.7b2248d0.js"></script><link href="/split/static/css/main.7e3b244e.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><link rel="manifest" href="/split/manifest.json"/><title>Split Expenses</title><script async src="https://www.googletagmanager.com/gtag/js?id=G-8B1XDST26S"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-8B1XDST26S")</script><script defer="defer" src="/split/static/js/main.7b2248d0.js"></script><link href="/split/static/css/main.7e3b244e.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
